# hawk-bt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: design.md  integration.md  requirements.md
examples/: simple_ma.py  test.py
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: codec.rs  decode.rs  encode.rs  engine.rs  errors.rs  lib.rs  wire.rs  ws.rs
src/hawk_backtester/: __init__.py  hawk_engine.py  logging.py
src/hawk_backtester/runtime/: __init__.py  engine_api.py  loop.py  progress.py  rust_engine_async_adapter.py
src/hawk_backtester/strategy/: __init__.py  api.py  commands.py
src/hawk_bt/: __init__.py  hawk_engine.py  logging.py
src/hawk_bt/runtime/: __init__.py  loop.py  rust_engine_async_adapter.py
src/hawk_bt/strategy/: __init__.py  api.py  commands.py
src/py_engine/protocol/: codecs.py  wire.py
src/py_engine/runtime/: __init__.py  engine_api.py  loop.py  progress.py  rpc_client.py  rust_bridge.py  rust_engine_async_adapter.py  rust_ws_server.py  ws_server.py
src/py_engine/strategy/: api.py  commands.py
