[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-engine"
version = "0.1.0"
description = "Python client library for local WS <-> WASM trading simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "websockets>=11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["py_engine*"]
