[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hawk-bt"
version = "0.1.3"
description = "Python client library for Hawk-Backtester — local strategy backtesting via WS <-> WASM simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "hawk-bt-rust-engine",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hawk_bt*"]
