[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hawk-bt-rust-engine"
version = "0.1.0"
description = "Rust-based WS/RPC engine for hawk-bt (Hawk-Backtester)"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
